--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ cover/
 *.pot
 
 # Django stuff:
+logs/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -157,4 +158,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-artifact/
+artifacts/
